// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScenarioDetailsCard > should match snapshot when fully rendered 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex h-full w-full gap-6 bg-white overflow-hidden transition-all duration-300 rounded-md origin-top-left border-[0.3px] border-[#D3D3D3]"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div>
      <img
        alt="Test Scenario Details scenario details"
        class="w-[320px] h-[320px] object-cover"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col min-w-[400px] w-[calc(100%-320px)] justify-between flex-grow p-6 text-[14px] font-['IBM_Plex_Serif'] overflow-y-auto"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center justify-between"
          id="scenario-title"
        >
          <span
            class="text-[#0D0D0D] text-xl"
          >
            Test Scenario Details
          </span>
          <div
            aria-label="Copy link"
            class="flex items-center gap-[4px] cursor-pointer"
            role="button"
            title="Copy link to clipboard"
          >
            <svg
              data-testid="share-icon"
            />
            <span
              class="text-[#6B7280] text-[14px] font-['Roboto']"
            >
              Share
            </span>
          </div>
        </div>
        <div>
          <div
            class="font-semibold text-black"
          >
            Scenario:
          </div>
          <p
            class="text-[#656565]"
          >
            This is a detailed description of the scenario that explains what the simulation covers.
          </p>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <button
          aria-label="Start simulation"
          class="!font-['Roboto']  "
          data-testid="mock-button"
          data-variant="primary"
        >
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScenarioDetailsCard > should match snapshot when isStarting is true 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex h-full w-full gap-6 bg-white overflow-hidden transition-all duration-300 rounded-md origin-top-left border-[0.3px] border-[#D3D3D3]"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div>
      <img
        alt="Test Scenario Details scenario details"
        class="w-[320px] h-[320px] object-cover"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col min-w-[400px] w-[calc(100%-320px)] justify-between flex-grow p-6 text-[14px] font-['IBM_Plex_Serif'] overflow-y-auto"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center justify-between"
          id="scenario-title"
        >
          <span
            class="text-[#0D0D0D] text-xl"
          >
            Test Scenario Details
          </span>
          <div
            aria-label="Copy link"
            class="flex items-center gap-[4px] cursor-pointer"
            role="button"
            title="Copy link to clipboard"
          >
            <svg
              data-testid="share-icon"
            />
            <span
              class="text-[#6B7280] text-[14px] font-['Roboto']"
            >
              Share
            </span>
          </div>
        </div>
        <div>
          <div
            class="font-semibold text-black"
          >
            Scenario:
          </div>
          <p
            class="text-[#656565]"
          >
            This is a detailed description of the scenario that explains what the simulation covers.
          </p>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <button
          aria-label="Start simulation"
          class="!font-['Roboto']  !bg-gray-400"
          data-testid="mock-button"
          data-variant="primary"
          disabled=""
        >
          <div
            data-size="16"
            data-testid="circular-progress"
          />
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScenarioDetailsCard > should match snapshot when noCredits is true 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex h-full w-full gap-6 bg-white overflow-hidden transition-all duration-300 rounded-md origin-top-left border-[0.3px] border-[#D3D3D3]"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div>
      <img
        alt="Test Scenario Details scenario details"
        class="w-[320px] h-[320px] object-cover"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col min-w-[400px] w-[calc(100%-320px)] justify-between flex-grow p-6 text-[14px] font-['IBM_Plex_Serif'] overflow-y-auto"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="flex items-center justify-between"
          id="scenario-title"
        >
          <span
            class="text-[#0D0D0D] text-xl"
          >
            Test Scenario Details
          </span>
          <div
            aria-label="Copy link"
            class="flex items-center gap-[4px] cursor-pointer"
            role="button"
            title="Copy link to clipboard"
          >
            <svg
              data-testid="share-icon"
            />
            <span
              class="text-[#6B7280] text-[14px] font-['Roboto']"
            >
              Share
            </span>
          </div>
        </div>
        <div>
          <div
            class="font-semibold text-black"
          >
            Scenario:
          </div>
          <p
            class="text-[#656565]"
          >
            This is a detailed description of the scenario that explains what the simulation covers.
          </p>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <button
          aria-label="Start simulation"
          class="!font-['Roboto']  !bg-gray-400"
          data-testid="mock-button"
          data-variant="primary"
          disabled=""
        >
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
